objects/MedProSC__MedProAppSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MedProSC__Debug_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Hide_Transient_Classes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Transient Classes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Installation_Details__c</fullName>
        <label>Installation Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MassUpdateEmailNotification_Address__c</fullName>
        <inlineHelpText>The email address that will be used to notify an alternate system admin via email that a mass update of all MedProID stamped records has been performed.</inlineHelpText>
        <label>MassUpdateEmailNotification_Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MedProSC__Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Notification_Addresses__c</fullName>
        <description>For use in any custom processes for which a customer may wish to be notified of changes made by MedPro</description>
        <label>Notification Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro App Settings</label>
</CustomObject>